--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <section class="flex justify-center w-full h-full">
         <div class="flex justify-center w-full h-full items-start">
-            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).png" alt="background-pic">
+            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).png" alt="background-pic" loading="lazy">
             <div class="absolute pl-6 sm:pl-0 pt-16 lg:pt-28">
                 <p class="text-3xl sm:text-[28px] text-[#FEF000] font-black text-start sm:text-center">GAIN DISTANCE, PRECISION AND STABILITY</p>
                 <div class="flex justify-start sm:justify-center mt-5">
