--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
-    <style>
-        /* Add font preloading to improve font loading performance */
-        @font-face {
-            font-family: 'Montserrat';
-            font-style: normal;
-            font-weight: 400;
-            src: local('Montserrat'), url('https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2') format('woff2');
-        }
-    </style>
 </head>
 <body>
     <header class="flex justify-between items-center bg-black px-4 sm:px-12 py-6">
@@ -51,7 +42,7 @@
     </div>
     <section class="flex justify-center w-full h-full">
         <div class="flex justify-center w-full h-full items-start">
-            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).png" alt="background-pic" loading="lazy">
+            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).png" alt="background-pic" loading="">
             <div class="absolute pl-6 sm:pl-0 pt-16 lg:pt-28">
                 <p class="text-3xl sm:text-[28px] text-[#FEF000] font-black text-start sm:text-center">GAIN DISTANCE, PRECISION AND STABILITY</p>
                 <div class="flex justify-start sm:justify-center mt-5">
