second image convert

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <section class="flex justify-center w-full">
         <div class="flex justify-center w-full items-start">
-            <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1).png" alt="sports-picture">
+            <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1).jpg" alt="sports-picture">
             <div class="absolute pt-20  px-4 sm:px-0">
                 <div class="flex justify-center">
                     <p class="text-[#FEF000] text-3xl md:text-5xl lg:text-[64px] leading-[40px] md:leading-[75px] font-black max-w-[400px] sm:max-w-xl md:max-w-3xl lg:max-w-[900px] 
