--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 hover:bg-transparent hover:border-black border-2 border-transparent hover:text-black">Find My Shaft</button>
             </div>
             <div>
-                <img class="max-w-auto sm:max-w-xl md:max-w-3xl max-h-96" src="montage-TPT-Golf_V2-2048x1170 1 (1).jpg" alt="youtube short">
+                <img class="max-w-auto sm:max-w-xl md:max-w-3xl max-h-96" src="montage-TPT-Golf_V2-2048x1170 1.png" alt="youtube short">
             </div>
         </div>
     </section>
