--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
+    <style>
+        /* Add CSS variables for commonly used values */
+        :root {
+            --primary-color: #FEF000;
+            --secondary-color: #333;
+            --font-size-base: 16px;
+        }
+    </style>
 </head>
 <body>
     <header class="flex justify-between items-center bg-black px-4 sm:px-12 py-6">
