remove load lazy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="flex justify-between items-center bg-black px-4 sm:px-12 py-6">
-        <img class="w-32 h-5" src="logo-TPT-300x138 1.png" alt="Logo" loading="lazy">
+        <img class="w-32 h-5" src="logo-TPT-300x138 1.png" alt="Logo">
         <ul class="hidden lg:flex gap-6 text-xs font-bold text-white">
             <li class="hover:text-[#FEF000]"><a href="driver-shaft.html">DRIVER SHAFT</a></li>
             <li class="hover:text-[#FEF000]"><a href="fairway-wood-shaft.html">FAIRWAY WOOD SHAFT</a></li>
@@ -42,7 +42,7 @@
     </div>
     <section class="flex justify-center w-full h-full">
         <div class="flex justify-center w-full h-full items-start">
-            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).jpg" alt="background-pic" loading="lazy">
+            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).jpg" alt="background-pic" loading="">
             <div class="absolute pl-6 sm:pl-0 pt-16 lg:pt-28">
                 <p class="text-3xl sm:text-[28px] text-[#FEF000] font-black text-start sm:text-center">GAIN DISTANCE, PRECISION AND STABILITY</p>
                 <div class="flex justify-start sm:justify-center mt-5">
