change image width

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-5 pl-4 md:pl-5">Cookie Policy</p>
                 </footer>
                 <div class="pt-20 lg:pt-24 pb-0 flex flex-col justify-center items-center">
-                    <img class="max-w-32 lg:max-w-64 max-h-14" src="logo-TPT 1.png" alt="LOGO">
+                    <img class="max-w-auto max-h-auto" src="logo-TPT 1.png" alt="LOGO">
                     <p class="text-base lg:text-xl font-normal text-white max-w-96 lg:max-w-64 text-center mt-3">Chemin du Closel, 
                     3CH-1020 Renens, Switzerland</p>
                     <button type="submit" class=" flex items-center gap-3 bg-[#FEF000] px-7 py-2 
