--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <section class="flex justify-center w-full h-full">
         <div class="flex justify-center w-full h-full items-start">
-            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).jpg" alt="background-pic" loading="">
+            <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).webp" alt="background-pic" loading="">
             <div class="absolute pl-6 sm:pl-0 pt-16 lg:pt-28">
                 <p class="text-3xl sm:text-[28px] text-[#FEF000] font-black text-start sm:text-center">GAIN DISTANCE, PRECISION AND STABILITY</p>
                 <div class="flex justify-start sm:justify-center mt-5">
@@ -69,7 +69,7 @@
     </section>
     <section class="flex justify-center w-full">
         <div class="flex justify-center w-full items-start">
-            <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1).jpg" alt="sports-picture">
+            <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1) (2).webp" alt="sports-picture">
             <div class="absolute pt-20  px-4 sm:px-0">
                 <div class="flex justify-center">
                     <p class="text-[#FEF000] text-3xl md:text-5xl lg:text-[64px] leading-[40px] md:leading-[75px] font-black max-w-[400px] sm:max-w-xl md:max-w-3xl lg:max-w-[900px] 
@@ -155,7 +155,7 @@
     </section>
     <section class="flex flex-col justify-center w-full">
         <div class="flex justify-center w-full items-start">
-            <img class="relative w-full h-[995px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15.jpg" alt="background2-pic">
+            <img class="relative w-full h-[995px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic">
             <div class="absolute pt-24 sm:pt-16 px-5 sm:px-2 lg:px-0 ">
                 <div class="grid justify-center">
                     <p class="text-[#FEF000] text-5xl lg:text-[64px] font-black max-w-[900px] text-center">SIGN UP</p>
