convert courtney png image to webp

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     text-center">60 VICTORIES ON TOURS SINCE 2016</p>
                 </div>
                 <div class=" flex justify-center lg:justify-start pt-16 lg:pt-24 gap-8 ">
-                    <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-u2JEtE-xGsw-unsplash 1.png" alt="sport-halfpic">
-                    <img class="max-w-auto sm:max-w-xl md:max-w-[600px] lg:max-w-[700px] max-h-[300px] lg:max-h-[393px]" src="courtney-cook-0s70M63bKCE-unsplash 1.png" alt="sports-2">
-                    <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-516U4AJFsN4-unsplash 1.png" alt="sport-3">
+                    <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-u2JEtE-xGsw-unsplash 1.webp" alt="sport-halfpic">
+                    <img class="max-w-auto sm:max-w-xl md:max-w-[600px] lg:max-w-[700px] max-h-[300px] lg:max-h-[393px]" src="courtney-cook-0s70M63bKCE-unsplash 1.webp" alt="sports-2">
+                    <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-516U4AJFsN4-unsplash 1.webp" alt="sport-3">
                 </div>
                 <div class="flex justify-center gap-5 pt-10 lg:pt-16">
                     <div class="w-3 h-3 rounded-full bg-white hover:bg-[#FEF000]"></div>
