image logo png into webp

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="flex justify-between items-center bg-black px-4 sm:px-12 py-6">
-        <img class="w-32 h-5" src="logo-TPT-300x138 1.png" alt="Logo">
+        <img class="w-32 h-5" src="logo-TPT-300x138 1.webp" alt="Logo">
         <ul class="hidden lg:flex gap-6 text-xs font-bold text-white">
             <li class="hover:text-[#FEF000]"><a href="driver-shaft.html">DRIVER SHAFT</a></li>
             <li class="hover:text-[#FEF000]"><a href="fairway-wood-shaft.html">FAIRWAY WOOD SHAFT</a></li>
