icon image convert png into webp

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li class="hover:text-[#FEF000]"><a href="Figma.html">RETURN TO TPT</a></li>
         </ul>
         <div class="hidden lg:flex gap-2">
-            <img src="Group 53.png" alt="Icon 1">
-            <img src="Group 54.png" alt="Icon 2">
+            <img src="Group 53.webp" alt="Icon 1">
+            <img src="Group 54.webp" alt="Icon 2">
             <img src="Group 55 (1).png" alt="Icon 3">
         </div>
         <img class="block w-8 h-8 lg:hidden cursor-pointer" src="free-bars-1440391-1216351.png" alt="Menu Icon" id="menu-icon">
@@ -35,8 +35,8 @@
             <li><a href="return-to-tpt.html">RETURN TO TPT</a></li>
         </ul>
         <div class="flex gap-2 p-4">
-            <img src="Group 53.png" alt="Icon 1">
-            <img src="Group 54.png" alt="Icon 2">
+            <img src="Group 53.webp" alt="Icon 1">
+            <img src="Group 54.webp" alt="Icon 2">
             <img src="Group 55 (1).png" alt="Icon 3">
         </div>
     </div>
