image convert into webp

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     hover:bg-transparent hover:border-[#FEF000] hover:text-[#FEF000] border-2 border-transparent">Find My Shaft</button>
                 </div>
                 <div class="hidden sm:flex justify-center pt-11">
-                    <img src="Vector 1.png" alt="icon">
+                    <img src="Vector 1.webp" alt="icon">
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
                 hover:bg-transparent hover:border-black border-2 border-transparent hover:text-black">Find My Shaft</button>
             </div>
             <div>
-                <img class="max-w-auto sm:max-w-xl md:max-w-3xl max-h-96" src="montage-TPT-Golf_V2-2048x1170 1.png" alt="youtube short">
+                <img class="max-w-auto sm:max-w-xl md:max-w-3xl max-h-96" src="montage-TPT-Golf_V2-2048x1170 1.webp" alt="youtube short">
             </div>
         </div>
     </section>
