icon image convert into webp

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
             Manager</h3>
             <div class="flex  md:flex flex-col gap-4 md:gap-0 md:flex-row justify-center">
                 <div class="flex gap-3 items-center border-r-none md:border-r-2 border-black pr-0 md:pr-8">
-                    <img src="Group 50.png" alt="phone-icon">
+                    <img src="Group 50.webp" alt="phone-icon">
                     <a class="text-base md:text-xl">+33 627058016</a>
                 </div>
                 <div class="flex gap-3 items-center pl-0 md:pl-8">
-                    <img src="Group 49.png" alt="mail-icon">
+                    <img src="Group 49.webp" alt="mail-icon">
                     <a class="text-base md:text-xl">support@tptgolf.com</a>
                 </div>
             </div>
