remove section and rename div

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             <img src="Group 55 (1).png" alt="Icon 3">
         </div>
     </div>
-    <section class="flex justify-center w-full h-full">
-        <div class="flex justify-center w-full h-full items-start">
+        <section class="flex justify-center w-full h-full items-start">
             <img class="relative w-full h-[770px] lg:h-[800px]" src="lo-sarno-QLdp9SGDf5Y-unsplash 1 (1).webp" alt="background-pic" loading="lazy">
             <div class="absolute pl-6 sm:pl-0 pt-16 lg:pt-28">
                 <p class="text-3xl sm:text-[28px] text-[#FEF000] font-black text-start sm:text-center">GAIN DISTANCE, PRECISION AND STABILITY</p>
@@ -65,8 +64,7 @@
                     <img src="Vector 1.webp" alt="icon">
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     <section class="flex justify-center w-full">
         <div class="flex justify-center w-full items-start">
             <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1) (2).webp" alt="sports-picture" loading="lazy">
