--- a/index.html
+++ b/index.html
@@ -65,24 +65,22 @@
             </div>
         </div>
     </section>
-    <section class="flex justify-center w-full">
-        <div class="flex justify-center w-full items-start">
-            <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1) (2).webp" alt="sports-picture" loading="lazy">
-            <div class="absolute pt-20  px-4 sm:px-0">
-                <div class="flex justify-center">
-                    <p class="text-[#FEF000] text-3xl md:text-5xl lg:text-[64px] leading-[40px] md:leading-[75px] font-black max-w-[400px] sm:max-w-xl md:max-w-3xl lg:max-w-[900px] 
-                    text-center">60 VICTORIES ON TOURS SINCE 2016</p>
-                </div>
-                <div class=" flex justify-center lg:justify-start pt-16 lg:pt-24 gap-8 ">
-                    <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-u2JEtE-xGsw-unsplash 1.webp" alt="sport-halfpic">
-                    <img class="max-w-auto sm:max-w-xl md:max-w-[600px] lg:max-w-[700px] max-h-[300px] lg:max-h-[393px]" src="courtney-cook-0s70M63bKCE-unsplash 1.webp" alt="sports-2">
-                    <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-516U4AJFsN4-unsplash 1.webp" alt="sport-3">
-                </div>
-                <div class="flex justify-center gap-5 pt-10 lg:pt-16">
-                    <div class="w-3 h-3 rounded-full bg-white hover:bg-[#FEF000]"></div>
-                    <div class="w-3 h-3 rounded-full bg-[#FEF000] hover:bg-white"></div>
-                    <div class="w-3 h-3 rounded-full bg-white hover:bg-[#FEF000]"></div>
-                </div>
+    <section class="flex justify-center w-full items-start">
+        <img class="relative w-full h-[600px] sm:h-[650px] md:h-[750px] lg:h-[800px]" src="peter-drew-L0TtxTPYEqg-unsplash 1 (1) (2).webp" alt="sports-picture" loading="lazy">
+        <div class="absolute pt-20  px-4 sm:px-0">
+            <div class="flex justify-center">
+                <p class="text-[#FEF000] text-3xl md:text-5xl lg:text-[64px] leading-[40px] md:leading-[75px] font-black max-w-[400px] sm:max-w-xl md:max-w-3xl lg:max-w-[900px] 
+                text-center">60 VICTORIES ON TOURS SINCE 2016</p>
+            </div>
+            <div class=" flex justify-center lg:justify-start pt-16 lg:pt-24 gap-8 ">
+                <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-u2JEtE-xGsw-unsplash 1.webp" alt="sport-halfpic">
+                <img class="max-w-auto sm:max-w-xl md:max-w-[600px] lg:max-w-[700px] max-h-[300px] lg:max-h-[393px]" src="courtney-cook-0s70M63bKCE-unsplash 1.webp" alt="sports-2">
+                <img class="max-w-[0px] lg:max-w-[290px] max-h-[0px] lg:max-h-[393px]" src="courtney-cook-516U4AJFsN4-unsplash 1.webp" alt="sport-3">
+            </div>
+            <div class="flex justify-center gap-5 pt-10 lg:pt-16">
+                <div class="w-3 h-3 rounded-full bg-white hover:bg-[#FEF000]"></div>
+                <div class="w-3 h-3 rounded-full bg-[#FEF000] hover:bg-white"></div>
+                <div class="w-3 h-3 rounded-full bg-white hover:bg-[#FEF000]"></div>
             </div>
         </div>
     </section>
