remove section and rename div

--- a/index.html
+++ b/index.html
@@ -149,39 +149,37 @@
             </div>
         </div>
     </section>
-    <section class="flex flex-col justify-center w-full">
-        <div class="flex justify-center w-full items-start">
-            <img class="relative w-full h-[995px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
-            <div class="absolute pt-24 sm:pt-16 px-5 sm:px-2 lg:px-0 ">
-                <div class="grid justify-center">
-                    <p class="text-[#FEF000] text-5xl lg:text-[64px] font-black max-w-[900px] text-center">SIGN UP</p>
-                    <p class="text-xl text-[#FEF000] mt-6 font-medium max-w-md text-center">Stay up to date on the latest news and product releases from TPT.</p>
-                </div>
-                <div class="px-0 sm:px-28 lg:px-96 mt-5">
-                    <form class="flex flex-col space-y-4 pt-6 pb-10 lg:pb-16">
-                        <input type="email" placeholder="Enter your Email to join our Mailing List" 
-                        class="p-4 border border-gray-300 rounded w-full focus:outline-none focus:border-blue-500" required />
-                        <button type="submit" class="bg-[#FEF000] text-black py-4 rounded 
-                        text-base sm:text-xl font-black focus:ring-2 focus:ring-blue-500">SUBSCRIBE</button>
-                    </form>
-                </div>
-                <footer class="grid sm:grid md:grid  grid-cols-2 md:grid-cols-3 lg:flex bg-[#FEF000] gap-6 md:gap-0 justify-center px-12 sm:px-32 md:px-40 lg:px-36 py-8">
-                    <p class="text-sm sm:text-base lg:text-xl font-black border-r-2 border-black pr-0 md:pr-0 lg:pr-5">CONTACT FAQ</p>
-                    <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-7 lg:pr-5 pl-4 md:pl-5">Privacy Policy</p>
-                    <p class="text-sm sm:text-base lg:text-xl font-black border-r-2 border-black pr-0 md:pr-5 pl-0 md:pl-5 lg:pl-5">FITTER LOGIN</p>
-                    <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-0 lg:pr-5 pl-4 md:pl-0 lg:pl-5">TERMS</p>
-                    <p class="text-sm sm:text-base lg:text-xl font-black border-r-2 border-black pr-5 md:pr-3 lg:pr-5 pl-0 md:pl-4 lg:pl-5">warranty conditions</p>
-                    <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-5 pl-4 md:pl-5">Cookie Policy</p>
-                </footer>
-                <div class="pt-20 lg:pt-24 pb-0 flex flex-col justify-center items-center">
-                    <img class="max-w-auto max-h-auto" src="logo-TPT 1.webp" alt="LOGO">
-                    <p class="text-base lg:text-xl font-normal text-white max-w-96 lg:max-w-64 text-center mt-3">Chemin du Closel, 
-                    3CH-1020 Renens, Switzerland</p>
-                    <button type="submit" class=" flex items-center gap-3 bg-[#FEF000] px-7 py-2 
-                    text-sm font-normal mt-6"><img src="Group 51.png" alt="mail2-icon"> Email Us!</button>
-                    <div class="border-t-2 border-gray-500 w-full mt-9 pt-3">
-                        <p class="text-white text-sm text-center">All Rights Reserved, TPT</p>
-                    </div>
+    <section class="flex justify-center w-full items-start">
+        <img class="relative w-full h-[995px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
+        <div class="absolute pt-24 sm:pt-16 px-5 sm:px-2 lg:px-0 ">
+            <div class="grid justify-center">
+                <p class="text-[#FEF000] text-5xl lg:text-[64px] font-black max-w-[900px] text-center">SIGN UP</p>
+                <p class="text-xl text-[#FEF000] mt-6 font-medium max-w-md text-center">Stay up to date on the latest news and product releases from TPT.</p>
+            </div>
+            <div class="px-0 sm:px-28 lg:px-96 mt-5">
+                <form class="flex flex-col space-y-4 pt-6 pb-10 lg:pb-16">
+                    <input type="email" placeholder="Enter your Email to join our Mailing List" 
+                    class="p-4 border border-gray-300 rounded w-full focus:outline-none focus:border-blue-500" required />
+                    <button type="submit" class="bg-[#FEF000] text-black py-4 rounded 
+                    text-base sm:text-xl font-black focus:ring-2 focus:ring-blue-500">SUBSCRIBE</button>
+                </form>
+            </div>
+            <footer class="grid sm:grid md:grid  grid-cols-2 md:grid-cols-3 lg:flex bg-[#FEF000] gap-6 md:gap-0 justify-center px-12 sm:px-32 md:px-40 lg:px-36 py-8">
+                <p class="text-sm sm:text-base lg:text-xl font-black border-r-2 border-black pr-0 md:pr-0 lg:pr-5">CONTACT FAQ</p>
+                <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-7 lg:pr-5 pl-4 md:pl-5">Privacy Policy</p>
+                <p class="text-sm sm:text-base lg:text-xl font-black border-r-2 border-black pr-0 md:pr-5 pl-0 md:pl-5 lg:pl-5">FITTER LOGIN</p>
+                <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-0 lg:pr-5 pl-4 md:pl-0 lg:pl-5">TERMS</p>
+                <p class="text-sm sm:text-base lg:text-xl font-black border-r-2 border-black pr-5 md:pr-3 lg:pr-5 pl-0 md:pl-4 lg:pl-5">warranty conditions</p>
+                <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-5 pl-4 md:pl-5">Cookie Policy</p>
+            </footer>
+            <div class="pt-20 lg:pt-24 pb-0 flex flex-col justify-center items-center">
+                <img class="max-w-auto max-h-auto" src="logo-TPT 1.webp" alt="LOGO">
+                <p class="text-base lg:text-xl font-normal text-white max-w-96 lg:max-w-64 text-center mt-3">Chemin du Closel, 
+                3CH-1020 Renens, Switzerland</p>
+                <button type="submit" class=" flex items-center gap-3 bg-[#FEF000] px-7 py-2 
+                text-sm font-normal mt-6"><img src="Group 51.png" alt="mail2-icon"> Email Us!</button>
+                <div class="border-t-2 border-gray-500 w-full mt-9 pt-3">
+                    <p class="text-white text-sm text-center">All Rights Reserved, TPT</p>
                 </div>
             </div>
         </div>
