change height of image

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
     </section>
     <section class="flex justify-center w-full items-start">
-        <img class="relative w-full h-[995px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
+        <img class="relative w-full h-[970px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
         <div class="absolute pt-24 sm:pt-16 px-5 sm:px-2 lg:px-0 ">
             <div class="grid justify-center">
                 <p class="text-[#FEF000] text-5xl lg:text-[64px] font-black max-w-[900px] text-center">SIGN UP</p>
@@ -173,10 +173,10 @@
                 <p class="text-sm sm:text-base lg:text-xl font-black border-r-0 md:border-r-2 border-black pr-0 md:pr-5 pl-4 md:pl-5">Cookie Policy</p>
             </footer>
             <div class="pt-10 lg:pt-24 pb-0 flex flex-col justify-center items-center">
-                <img class="max-w-auto max-h-auto" src="logo-TPT 1.webp" alt="LOGO">
-                <p class="text-base lg:text-xl font-normal text-white max-w-96 lg:max-w-64 text-center mt-3">Chemin du Closel, 
+                <img class="max-w-40 sm:max-w-auto max-h-auto" src="logo-TPT 1.webp" alt="LOGO">
+                <p class="text-sm lg:text-xl font-normal text-white max-w-96 lg:max-w-64 text-center mt-3">Chemin du Closel, 
                 3CH-1020 Renens, Switzerland</p>
-                <button type="submit" class=" flex items-center gap-3 bg-[#FEF000] px-7 py-2 
+                <button type="submit" class="flex items-center gap-3 bg-[#FEF000] px-7 py-2 
                 text-sm font-normal mt-6"><img src="Group 51.png" alt="mail2-icon"> Email Us!</button>
                 <div class="border-t-2 border-gray-500 w-full mt-9 pt-3">
                     <p class="text-white text-sm text-center">All Rights Reserved, TPT</p>
