--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             font-black text-white mt-5 mb-7 max-w-md sm:max-w-3xl lg:max-w-[996px] text-start sm:text-center">ONLY 
             SPINELESS SHAFTS IN THE WORLD</p>
             <div class=" flex justify-start sm:justify-center md:block">
-                <p class="text-xl font-normal text-white text-start sm:text-center max-w-lg sm:max-w-2xl md:max-w-3xl lg:max-w-[940px]">eeking more distance without sacrificing accuracy? Traditional shafts often force that trade-off.
+                <p class="text-base sm:text-xl font-normal text-white text-start sm:text-center max-w-lg sm:max-w-2xl md:max-w-3xl lg:max-w-[940px]">eeking more distance without sacrificing accuracy? Traditional shafts often force that trade-off.
                 But not with TPT. <br class="mb-6">Unlike traditional premium shafts, TPT eliminates parasitic bending 
                 during your swing. This means consistent strikes on the clubface, unlocking both distance and precision. 
                 With TPT, softer shafts mean more yards and tighter shots.</p>
