I change image height

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </section>
-    <section class="flex justify-center w-full items-start">
+    <section class="flex justify-center w-full items-start h-screen">
         <img class="relative w-full h-[970px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
         <div class="absolute pt-24 sm:pt-16 px-5 sm:px-2 lg:px-0 ">
             <div class="grid justify-center">
