montage image height change

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 hover:bg-transparent hover:border-black border-2 border-transparent hover:text-black">Find My Shaft</button>
             </div>
             <div>
-                <img class="max-w-auto sm:max-w-xl md:max-w-3xl max-h-96" src="montage-TPT-Golf_V2-2048x1170 1.webp" alt="youtube short">
+                <img class="max-w-auto sm:max-w-xl md:max-w-auto max-h-auto" src="montage-TPT-Golf_V2-2048x1170 1.webp" alt="youtube short">
             </div>
         </div>
     </section>
@@ -150,7 +150,7 @@
         </div>
     </section>
     <section class="flex justify-center w-full items-start">
-        <img class="relative w-full h-[970px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
+        <img class="relative w-full h-[960px] sm:h-[880px] md:h-[800px] lg:h-[900px]" src="Rectangle 15kslll.webp" alt="background2-pic" loading="lazy">
         <div class="absolute pt-24 sm:pt-16 px-5 sm:px-2 lg:px-0 ">
             <div class="grid justify-center">
                 <p class="text-[#FEF000] text-5xl lg:text-[64px] font-black max-w-[900px] text-center">SIGN UP</p>
