--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 hover:bg-transparent hover:border-black border-2 border-transparent hover:text-black">Find My Shaft</button>
             </div>
             <div>
-                <img class="max-w-auto sm:max-w-xl md:max-w-auto max-h-auto" src="montage-TPT-Golf_V2-2048x1170 1.webp" alt="youtube short">
+                <img class="max-w-auto sm:max-w-xl md:max-w-3xl max-h-auto" src="montage-TPT-Golf_V2-2048x1170 1.webp" alt="youtube short">
             </div>
         </div>
     </section>
