--- a/indeximg.html
+++ b/indeximg.html
@@ -10,13 +10,13 @@
     <header class="flex justify-around">
         <img src="Layer_1.png" alt="">
         <div class="flex gap-6">
-            <ul class="font-medium text-[15px] flex items-center gap-5">
+            <ul class="font-medium flex items-center gap-5">
                 <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">DRIVER SHAFT</a></li>
                 <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">FAIRWAY WOOD SHAFT</a></li>
                 <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">ONLINE FITTING</a></li>
                 <li class="text-black hover:text-[#2286E0]"><a href="find-a-fitter.html">FIND A FITTER</a></li>
             </ul>
-            <button class="bg-black">Get Started</button>
+            <button type="button" class="bg-black text-sm font-bold rounded-[3px] text-white px-6 py-3">Get Started</button>
         </div>
     </header>
 </body>
