--- a/indeximg.html
+++ b/indeximg.html
@@ -7,17 +7,37 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="flex justify-around">
-        <img src="Layer_1.png" alt="">
-        <div class="flex gap-6">
-            <ul class="font-medium flex items-center gap-5">
-                <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">DRIVER SHAFT</a></li>
-                <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">FAIRWAY WOOD SHAFT</a></li>
-                <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">ONLINE FITTING</a></li>
-                <li class="text-black hover:text-[#2286E0]"><a href="find-a-fitter.html">FIND A FITTER</a></li>
-            </ul>
-            <button type="button" class="bg-black text-sm font-bold rounded-[3px] text-white px-6 py-3">Get Started</button>
+    <section class="flex flex-col justify-start w-full h-full items-start">
+        <img class="relative w-full" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
+        <div class="absolute w-full">
+            <div class="flex justify-between px-12 py-6 font-sans">
+                <img class="" src="Layer_1.png" alt="">
+                <div class="flex gap-10">
+                    <ul class="font-medium text-[15px] flex items-center gap-5">
+                        <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
+                        <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
+                        <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
+                        <li class="text-black hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
+                    </ul>
+                    <button type="button" class="bg-black text-sm font-bold rounded-[3px] text-white px-6 py-3">Get Started</button>
+                </div>
+            </div>
+            <div class="pt-24 flex justify-center text-center">
+                <h2 class="text-[42px] font-bold">Contact</h2>
+            </div>
+            <div class="flex justify-center gap-6 pt-20">
+                <div class="items-center flex justify-center">
+                    <p class="text-[32px] font-medium text-[#111827] max-w-md">Relational data connections create new insights. 
+                    Information becomes easily accessible with little effort.</p>
+                </div>
+                <img class="max-w-[690px] max-h-[400px]" alt="jacksparrow" src="image 20 (1).png">
+            </div>
         </div>
-    </header>
+    </section>
+    <section class="bg-[#111827]">
+        <img class="max-w-[570px] max-h-[592px]" alt="chatgroup" src="Group 455 (1).png">
+        <p>Employees, companies and contacts are connected with each other at 
+        a central point, a non-existent view is created.</p>
+    </section>
 </body>
 </html>
