--- a/indeximg.html
+++ b/indeximg.html
@@ -34,10 +34,26 @@
             </div>
         </div>
     </section>
-    <section class="bg-[#111827]">
-        <img class="max-w-[570px] max-h-[592px]" alt="chatgroup" src="Group 455 (1).png">
-        <p>Employees, companies and contacts are connected with each other at 
-        a central point, a non-existent view is created.</p>
+    <section class="bg-[#111827] flex justify-center items-center gap-32 mt-20">
+        <img class="" alt="chatgroup" src="Group 455 (1).png">
+        <div class="grid justify-center items-center">
+            <p class="text-[32px] font-medium text-white max-w-[430px] leading-10">Employees, companies and contacts 
+            are connected with each other at a central point, a non-existent view is created.</p>
+        </div>
+    </section>
+    <section>
+        <div class="flex justify-center">
+            <p class="text-[32px] font-medium max-w-5xl">Create project lists of your contacts and employees, 
+            filter by project participants and their roles. Synchronize contact information with Outlook* and 
+            stay up to date.</p>
+        </div>
+        <div class=" flex justify-center items-center">
+            <img class="relative" alt="Rectangle" src="Rectangle 357.png">
+            <div class="absolute">
+                <img class="" alt="" src="image 23 (1).png">
+            </div>
+            <img alt="" class="" src="Ellipse 23.png">
+        </div>
     </section>
 </body>
 </html>
