--- a/indeximg.html
+++ b/indeximg.html
@@ -41,19 +41,23 @@
             are connected with each other at a central point, a non-existent view is created.</p>
         </div>
     </section>
-    <section>
-        <div class="flex justify-center">
+    <section class="pt-24">
+        <div class="flex justify-center pb-10">
             <p class="text-[32px] font-medium max-w-5xl">Create project lists of your contacts and employees, 
             filter by project participants and their roles. Synchronize contact information with Outlook* and 
             stay up to date.</p>
         </div>
         <div class=" flex justify-center items-center">
-            <img class="relative" alt="Rectangle" src="Rectangle 357.png">
-            <div class="absolute">
-                <img class="" alt="" src="image 23 (1).png">
-            </div>
-            <img alt="" class="" src="Ellipse 23.png">
+            <img class="" alt="Rectangle" src="Screenshot 2024-06-25 141840.png">
         </div>
+    </section>
+    <section class="flex justify-center pl-24 gap-10 pt-20">
+        <div class="flex justify-center items-center">
+            <p class="w-[579px] font-medium text-[32px] leading-10 text-[#111827]">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+            commodo consequat.</p>
+        </div>
+        <img alt="max-w-[400px] max-h-[342px]" src="Group 427 (1).png">
     </section>
 </body>
 </html>
