--- a/indeximg.html
+++ b/indeximg.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <section class="flex flex-col justify-start w-full h-full items-start">
-        <img class="relative w-full" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
+    <section class="flex flex-col justify-start items-start">
+        <img class="relative w-full max-h-[900px]" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
         <div class="absolute w-full">
             <div class="flex justify-between px-12 py-6 font-sans">
                 <img class="" src="Layer_1.png" alt="">
@@ -58,6 +58,27 @@
             commodo consequat.</p>
         </div>
         <img alt="max-w-[400px] max-h-[342px]" src="Group 427 (1).png">
+    </section>
+    <section class="flex justify-start pl-12 pt-20">
+       <img class="relative max-w-[473px] max-h-[546px]" alt="mobile" src="Group 1 7.png">
+       <div class=" flex justify-center items-center">
+        <div class="flex justify-center items-center absolute right-60">
+            <div class="grid justify-center px-16 py-16 bg-[#111827] rounded-r-lg">
+                <div class="flex gap-8 items-center justify-center">
+                    <img alt="" src="fi_12581577.png">
+                    <p class="text-[32px] font-medium leading-10 text-white max-w-[570px]">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+       </div>
+    </section>
+    <section class="flex justify-center gap-32">
+        <div class="flex justify-center items-center">
+            <p class="text-[32px] font-medium text-[#111827] max-w-[540px] leading-10">Contact lists / collections can be created "auto-create from tags" like the 
+            image collections to save time exercitation ullamco laboris nisi ut aliquip consequat.</p>
+        </div>
+        <img class="max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
     </section>
 </body>
 </html>
