--- a/indeximg.html
+++ b/indeximg.html
@@ -7,12 +7,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <section class="flex flex-col justify-start items-start">
-        <img class="relative w-full max-h-[900px]" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
+    <section class="flex flex-col justify-start items-start pb-16 sm:pb-0">
+        <img class="relative w-full  h-[700px] sm:h-[900px] md:h-[980px] lg:h-[880px]" src="Contact - Details 1.png" alt="background-pic" loading="lazy">
         <div class="absolute w-full">
-            <div class="flex justify-between px-12 py-6 font-sans">
-                <img class="" src="Layer_1.png" alt="">
-                <div class="flex gap-10">
+            <header class="flex justify-between items-center px-12 py-6 font-sans">
+                <img class="" src="Layer_1.png" alt="logo">
+                <div class="hidden lg:flex gap-10">
                     <ul class="font-medium text-[15px] flex items-center gap-5">
                         <li class="text-black hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
                         <li class="text-black hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
@@ -21,64 +21,103 @@
                     </ul>
                     <button type="button" class="bg-black text-sm font-bold rounded-[3px] text-white px-6 py-3">Get Started</button>
                 </div>
+                <img class="block w-8 h-8 lg:hidden cursor-pointer" src="free-bars-1440391-1216351.png" alt="Menu Icon" id="menu-icon">
+            </header>
+            <div id="mobile-menu" class="hidden lg:hidden bg-black text-white">
+                <ul class="flex flex-col gap-6 text-xs font-bold p-4">
+                    <li class="hover:text-[#2286E0]"><a href="driver-shaft.html">Home</a></li>
+                    <li class="hover:text-[#2286E0]"><a href="fairway-wood-shaft.html">Features</a></li>
+                    <li class="hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
+                    <li class="hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
+                </ul>
             </div>
             <div class="pt-24 flex justify-center text-center">
-                <h2 class="text-[42px] font-bold">Contact</h2>
+                <h2 class="text-3xl sm:text-[42px] font-bold">Contact</h2>
             </div>
-            <div class="flex justify-center gap-6 pt-20">
-                <div class="items-center flex justify-center">
-                    <p class="text-[32px] font-medium text-[#111827] max-w-md">Relational data connections create new insights. 
+            <div class="grid lg:flex justify-center gap-16 lg:gap-10 pt-20 px-10 lg:px-10">
+                <div class="items-center block sm:flex justify-start lg:justify-center">
+                    <p class="text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Relational data connections create new insights. 
                     Information becomes easily accessible with little effort.</p>
                 </div>
-                <img class="max-w-[690px] max-h-[400px]" alt="jacksparrow" src="image 20 (1).png">
+                <img class="" alt="jacksparrow" src="image 20 (1).png">
             </div>
         </div>
     </section>
-    <section class="bg-[#111827] flex justify-center items-center gap-32 mt-20">
+    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0">
         <img class="" alt="chatgroup" src="Group 455 (1).png">
-        <div class="grid justify-center items-center">
-            <p class="text-[32px] font-medium text-white max-w-[430px] leading-10">Employees, companies and contacts 
+        <div class="grid justify-start lg:justify-center items-center">
+            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
             are connected with each other at a central point, a non-existent view is created.</p>
         </div>
     </section>
-    <section class="pt-24">
-        <div class="flex justify-center pb-10">
-            <p class="text-[32px] font-medium max-w-5xl">Create project lists of your contacts and employees, 
+    <section class="pt-28 px-8 lg:px-14">
+        <div class=" pb-10">
+            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-10">Create project lists of your contacts and employees, 
             filter by project participants and their roles. Synchronize contact information with Outlook* and 
             stay up to date.</p>
         </div>
         <div class=" flex justify-center items-center">
-            <img class="" alt="Rectangle" src="Screenshot 2024-06-25 141840.png">
+            <img class="w-full" alt="Rectangle" src="Screenshot 2024-06-25 141840.png">
         </div>
     </section>
-    <section class="flex justify-center pl-24 gap-10 pt-20">
-        <div class="flex justify-center items-center">
-            <p class="w-[579px] font-medium text-[32px] leading-10 text-[#111827]">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
+    <section class=" block lg:flex justify-center  pr-8 lg:pr-0 pl-8 lg:pl-24 gap-12 pt-32 lg:pt-20">
+        <div class="block lg:flex justify-center items-center mb-12 lg:mb-20 lg:mb-0">
+            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[580px] leading-8 sm:leading-10">Outlook plugin with a screenshot of outlook for mac. Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
             commodo consequat.</p>
         </div>
         <img alt="max-w-[400px] max-h-[342px]" src="Group 427 (1).png">
     </section>
-    <section class="flex justify-start pl-12 pt-20">
-       <img class="relative max-w-[473px] max-h-[546px]" alt="mobile" src="Group 1 7.png">
-       <div class=" flex justify-center items-center">
-        <div class="flex justify-center items-center absolute right-60">
-            <div class="grid justify-center px-16 py-16 bg-[#111827] rounded-r-lg">
+    <section class="grid md:flex justify-center lg:justify-start pl-8 lg:pl-12 pr-8 lg:pr-0 pt-32 lg:pt-20 pb-32 lg:pb-0">
+       <img class="hidden lg:block relative [473px] max-h-[546px]" alt="mobile" src="Group 1 7.png">
+       <div class="flex justify-center items-center">
+        <div class="flex justify-center items-center none lg:absolute right-20 lg:right-60">
+            <div class="grid justify-center px-10 lg:px-16 py-16 bg-[#111827] rounded-r-lg rounded-l-lg">
                 <div class="flex gap-8 items-center justify-center">
-                    <img alt="" src="fi_12581577.png">
-                    <p class="text-[32px] font-medium leading-10 text-white max-w-[570px]">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
+                    <img class="hidden lg:block" alt="" src="fi_12581577.png">
+                    <p class="text-xl sm:text-2xl lg:text-[32px] font-medium leading-10 text-white max-w-5xl lg:max-w-[570px]">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
                         adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                 </div>
             </div>
        </div>
     </section>
-    <section class="flex justify-center gap-32">
-        <div class="flex justify-center items-center">
-            <p class="text-[32px] font-medium text-[#111827] max-w-[540px] leading-10">Contact lists / collections can be created "auto-create from tags" like the 
+    <section class="block lg:flex justify-center gap-8 md:gap-32 px-8 lg:px-0">
+        <div class="block lg:flex justify-center items-center mb-20 lg:mb-0">
+            <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Contact lists / collections can be created "auto-create from tags" like the 
             image collections to save time exercitation ullamco laboris nisi ut aliquip consequat.</p>
         </div>
-        <img class="max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
+        <img class="max-w-full lg:max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
     </section>
+    <footer class="grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-28">
+        <div>
+            <img alt="logo" src="Layer_1 (2).png">
+            <p class="font-normal text-[15px] text-white max-w-[183px] mt-10">Copyright © 2023 Amenda
+            All rights reserved.</p>
+        </div>
+        <div class="grid gap-2">
+            <p class="text-base font-bold text-white">Quick Links</p>
+            <div class="w-5 h-[2px] bg-[#2286E0] mb-4 mt-3"></div>
+            <p class="font-normal text-[15px] text-white">Home</p>
+            <p class="font-normal text-[15px] text-white">Features</p>
+            <p class="font-normal text-[15px] text-white">Modules</p>
+            <p class="font-normal text-[15px] text-white">Benefits</p>
+        </div>
+        <div class="grid gap-2">
+            <p class="text-base font-bold text-white">Terms & Privacy</p>
+            <div class="w-5 h-[2px] bg-[#2286E0]"></div>
+            <p class="font-normal text-[15px] text-white">Imprint</p>
+            <p class="font-normal text-[15px] text-white">Datenschutz</p>
+            <p class="font-normal text-[15px] text-white">Contact</p>
+        </div>
+        <div class="grid gap-2">
+            <p class="text-base font-bold text-white">More Links</p>
+            <div class="w-5 h-[2px] bg-[#2286E0]"></div>
+            <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
+            <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
+            <p class="font-normal text-[15px] text-white">Lorem ipsum </p>
+        </div>
+    </footer>
+    <script src="index.js"></script>
 </body>
 </html>
