--- a/indeximg.html
+++ b/indeximg.html
@@ -89,7 +89,7 @@
         </div>
         <img class="max-w-full lg:max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
     </section>
-    <footer class="grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-28">
+    <footer class="grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] items-center justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-28">
         <div>
             <img alt="logo" src="Layer_1 (2).png">
             <p class="font-normal text-[15px] text-white max-w-[183px] mt-10">Copyright © 2023 Amenda
@@ -117,6 +117,7 @@
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum </p>
         </div>
+        <img class="mt-[-32px]" alt="social-icons" src="Group 319.png">
     </footer>
     <script src="index.js"></script>
 </body>
