--- a/indeximg.html
+++ b/indeximg.html
@@ -34,16 +34,16 @@
             <div class="pt-24 flex justify-center text-center">
                 <h2 class="text-3xl sm:text-[42px] font-bold">Contact</h2>
             </div>
-            <div class="grid lg:flex justify-center gap-16 lg:gap-10 pt-20 px-10 lg:px-10">
+            <div class="grid lg:flex justify-center gap-16 lg:gap-18 pt-20 px-10 lg:px-0">
                 <div class="items-center block sm:flex justify-start lg:justify-center">
                     <p class="text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Relational data connections create new insights. 
                     Information becomes easily accessible with little effort.</p>
                 </div>
-                <img class="" alt="jacksparrow" src="image 20 (1).png">
+                <img class="max-w-auto lg:max-w-[650px]" alt="jacksparrow" src="image 20 (1).png">
             </div>
         </div>
     </section>
-    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0">
+    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-12 pb-20 lg:pb-0 px-12 lg:px-0">
         <img class="" alt="chatgroup" src="Group 455 (1).png">
         <div class="grid justify-start lg:justify-center items-center">
             <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
@@ -89,7 +89,7 @@
         </div>
         <img class="max-w-full lg:max-w-[481px] max-h-[481px]" alt="" src="Group 430 (1).png">
     </section>
-    <footer class="grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] items-center justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-28">
+    <footer class="grid grid-cols-2 md:grid-cols-3 lg:flex bg-[#111827] justify-center gap-12 md:gap-0 lg:gap-32 py-24 px-16 mt-28">
         <div>
             <img alt="logo" src="Layer_1 (2).png">
             <p class="font-normal text-[15px] text-white max-w-[183px] mt-10">Copyright © 2023 Amenda
@@ -117,7 +117,6 @@
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum </p>
         </div>
-        <img class="mt-[-32px]" alt="social-icons" src="Group 319.png">
     </footer>
     <script src="index.js"></script>
 </body>
