--- a/indeximg.html
+++ b/indeximg.html
@@ -36,7 +36,7 @@
             </div>
             <div class="grid lg:flex justify-center gap-16 lg:gap-18 pt-20 px-10 lg:px-0">
                 <div class="items-center block sm:flex justify-start lg:justify-center">
-                    <p class="text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[540px] leading-8 sm:leading-10">Relational data connections create new insights. 
+                    <p class="text-xl sm:text-3xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[400px] leading-8 sm:leading-10">Relational data connections create new insights. 
                     Information becomes easily accessible with little effort.</p>
                 </div>
                 <img class="max-w-auto lg:max-w-[650px]" alt="jacksparrow" src="image 20 (1).png">
@@ -103,14 +103,14 @@
             <p class="font-normal text-[15px] text-white">Modules</p>
             <p class="font-normal text-[15px] text-white">Benefits</p>
         </div>
-        <div class="grid gap-2">
+        <div class="grid">
             <p class="text-base font-bold text-white">Terms & Privacy</p>
             <div class="w-5 h-[2px] bg-[#2286E0]"></div>
             <p class="font-normal text-[15px] text-white">Imprint</p>
             <p class="font-normal text-[15px] text-white">Datenschutz</p>
             <p class="font-normal text-[15px] text-white">Contact</p>
         </div>
-        <div class="grid gap-2">
+        <div class="grid gap-2 lg:gap-0">
             <p class="text-base font-bold text-white">More Links</p>
             <div class="w-5 h-[2px] bg-[#2286E0]"></div>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
