--- a/indeximg.html
+++ b/indeximg.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-12 pb-20 lg:pb-0 px-12 lg:px-0">
+    <section class="bg-[#111827] block lg:flex justify-center items-center gap-32 pt-16 lg:pt-8 pb-20 lg:pb-0 px-12 lg:px-0 h-auto lg:h-[500px]">
         <img class="" alt="chatgroup" src="Group 455 (1).png">
         <div class="grid justify-start lg:justify-center items-center">
             <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-4xl lg:max-w-[430px] leading-8 sm:leading-10">Employees, companies and contacts 
@@ -68,14 +68,14 @@
         </div>
         <img alt="max-w-[400px] max-h-[342px]" src="Group 427 (1).png">
     </section>
-    <section class="grid md:flex justify-center lg:justify-start pl-8 lg:pl-12 pr-8 lg:pr-0 pt-32 lg:pt-20 pb-32 lg:pb-0">
+    <section class="grid md:flex justify-center lg:justify-start pl-8 lg:pl-16 pr-8 lg:pr-0 pt-32 lg:pt-20 pb-32 lg:pb-0">
        <img class="hidden lg:block relative [473px] max-h-[546px]" alt="mobile" src="Group 1 7.png">
        <div class="flex justify-center items-center">
         <div class="flex justify-center items-center none lg:absolute right-20 lg:right-60">
-            <div class="grid justify-center px-10 lg:px-16 py-16 bg-[#111827] rounded-r-lg rounded-l-lg">
+            <div class="grid justify-center px-10 lg:px-16 py-16 bg-[#111827] rounded-r-lg rounded-l-lg lg:rounded-l-none">
                 <div class="flex gap-8 items-center justify-center">
                     <img class="hidden lg:block" alt="" src="fi_12581577.png">
-                    <p class="text-xl sm:text-2xl lg:text-[32px] font-medium leading-10 text-white max-w-5xl lg:max-w-[570px]">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
+                    <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-white max-w-2xl md:max-w-4xl lg:max-w-[560px] leading-8 sm:leading-10">contacts can be synced to mobile device. Lorem ipsum dolor sit amet, consectetur 
                         adipiscing elit quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                 </div>
