--- a/indeximg.html
+++ b/indeximg.html
@@ -19,7 +19,7 @@
                         <li class="text-black hover:text-[#2286E0]"><a href="online-fitting.html">Modules</a></li>
                         <li class="text-black hover:text-[#2286E0]"><a href="find-a-fitter.html">Benefits</a></li>
                     </ul>
-                    <button type="button" class="bg-black text-sm font-bold rounded-[3px] text-white px-6 py-3">Get Started</button>
+                    <button type="button" class="bg-black hover:bg-transparent text-sm font-bold rounded-[3px] text-white hover:text-black px-6 py-3 border-2 border-black">Get Started</button>
                 </div>
                 <img class="block w-8 h-8 lg:hidden cursor-pointer" src="free-bars-1440391-1216351.png" alt="Menu Icon" id="menu-icon">
             </header>
@@ -50,7 +50,7 @@
             are connected with each other at a central point, a non-existent view is created.</p>
         </div>
     </section>
-    <section class="pt-28 px-8 lg:px-14">
+    <section class="pt-36 px-8 lg:px-28 lg:px-14">
         <div class=" pb-10">
             <p class="text-xl sm:text-2xl md:text-[32px] font-medium text-[#111827] max-w-2xl md:max-w-4xl lg:max-w-[900px] leading-8 sm:leading-10">Create project lists of your contacts and employees, 
             filter by project participants and their roles. Synchronize contact information with Outlook* and 
@@ -116,6 +116,9 @@
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum dolor</p>
             <p class="font-normal text-[15px] text-white">Lorem ipsum </p>
+        </div>
+        <div class="mt-10 lg:mt-0">
+            <img alt="social-icons" src="Frame 318.png">
         </div>
     </footer>
     <script src="index.js"></script>
